static/css/header.css
.header, .page-header {
    display: flex;
    flex-direction: column;
    width: 100%;
    /* background-color: #2196F3; */
    padding: 10px 0;
    /* color: white; */
}

.header .socials {
    display: flex;
    justify-content: flex-end;
}

.header .socials img, .header .socials div {
    margin: 5px 10px;
    z-index: -1;
}

/* .header .pic {
    display: flex;
    justify-content: center;
} */

.header .pic img {
    height: 150px;
    border-radius: 50%;
}


.row-about {
    display: flex;
    flex-wrap: wrap;
    padding: 0 20px;
}

.header .info {
    flex-basis: 30%;
}

.header .text {
    flex-basis: 70%;
    max-width: 800px;
}

.navbar {
    display: flex;
    flex-direction: row;
    justify-content: center;
    font-family: 'Roboto Mono';
    margin: 5px 0;
    font-weight: 400;
    align-items: center;
}

@media (max-width: 600px){
    .navbar {
        display: none;
    }
}

.navbar .link {
    margin: 0 20px;
}

/* .header .links a {
    color: white;
    padding: 0 10px;
} */

.header h1 {
    margin: 0;
}

.page-header {
    flex-direction: row;
    justify-content: space-between;
}

.page-header h1 {
    color: white;
    margin: 0 5px;
}

